# rust/runtime/src/openapi.rs
@@ -50,6 +50,7 @@ use crate::terminals::{CreateResponse, DeleteResponse, TermInfo};
         crate::files::search::search_files,
         crate::files::search::match_files,
         crate::files::io::serve_file,
+        crate::files::io::display_file,
         crate::files::archive::archive,
         crate::files::archive::upload,
         crate::files::tools::tool_download,
@@ -57,7 +58,8 @@ use crate::terminals::{CreateResponse, DeleteResponse, TermInfo};
         crate::files::tools::tool_list_root,
         crate::files::tools::tool_exists,
         crate::files::archive::tool_upload,
-        crate::files::tools::list_ports,
+        crate::ports::list_ports,
+        crate::system::get_info,
         crate::snapshot::snapshot,
         crate::snapshot::restore,
         crate::terminals::create_terminal,
